Fix T51695: Border select fails w/ lamps

Draw order doesn't match scene order when mixing object types.